updated Utils.java